# Tucil3_13523161

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/board/: board.cpp  board.hpp  move.cpp  move.hpp  piece.cpp  piece.hpp
src/file-io/: board-reader.cpp  board-reader.hpp  solution-writer.cpp  solution-writer.hpp
src/solver/: solution.cpp  solution.hpp  solver.cpp  solver.hpp
src/solver/cumulative-cost-heuristics/: cumulative-cost-heuristic.hpp  cumulative-move-cost.cpp  cumulative-move-cost.hpp  cumulative-zero-cost.cpp  cumulative-zero-cost.hpp
src/solver/estimated-cost-heuristics/: blocking-cars-cost.cpp  blocking-cars-cost.hpp  estimated-cost-heuristic.hpp  estimated-zero-cost.cpp  estimated-zero-cost.hpp
test/: config.txt  output.txt
